src/test/ui/issues/issue-61882.stderr
error[E0308]: mismatched types
  --> $DIR/issue-61882.rs:4:27
   |
LL |     const B: A<u8> = Self(0);
   |                           ^ expected bool, found integer
   |
   = note: expected type `{integer}`
              found type `bool`

error[E0308]: mismatched types
  --> $DIR/issue-61882.rs:4:22
   |
LL |     const B: A<u8> = Self(0);
   |                      ^^^^^^^ expected u8, found bool
   |
   = note: expected type `A<bool>`
              found type `A<u8>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
